# UV-Cutout-Tool

./: CMakeLists.txt  LICENSE  README.md  build_release_mingw.bat
.github/workflows/: build.yml
resources/: resources.qrc  theme_order.json  themes.json
shaders/: background.frag  background.vert  wireframe.frag  wireframe.vert
src/: main.cpp
src/app/: AppSettings.cpp  AppSettings.h
src/codec/: BCDecoder.cpp  BCDecoder.h  DDSLoader.cpp  DDSLoader.h  TGAIO.cpp  TGAIO.h
src/cut/: MeshCutManifest.cpp  MeshCutManifest.h
src/geometry/: Geometry.cpp  Geometry.h  IslandBuilder.cpp  IslandBuilder.h  MeshData.h  SpatialGrid.cpp  SpatialGrid.h
src/headless/: HeadlessRunner.cpp  HeadlessRunner.h
src/parsers/: NiflyParser.cpp  NiflyParser.h  OBJParser.cpp  OBJParser.h
src/render/: CanvasRenderer.h  CpuCanvasRenderer.cpp  CpuCanvasRenderer.h  GpuCanvasRenderer.cpp  GpuCanvasRenderer.h
src/themes/: Theme.cpp  Theme.h
src/ui/: ExportDialog.cpp  ExportDialog.h  InfoPopup.cpp  InfoPopup.h  MainWindow.cpp  MainWindow.h  ShapeTreePanel.cpp  ShapeTreePanel.h  ThemePickerDialog.cpp  ThemePickerDialog.h  UVCanvasWidget.cpp  UVCanvasWidget.h  WarmButton.cpp  WarmButton.h  WelcomeWidget.cpp  WelcomeWidget.h
tools/: BC7Compare.cpp
